--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -539,10 +539,10 @@
   display: inline-block;
   background-color: var(--mdc-theme-surface);
   border: 1px solid var(--mdc-theme-overlay);
-  border-radius: 4px;
+  border-radius: 8px;
   color: var(--mdc-theme-on-surface);
   font-size: 10px;
-  padding: 2px 8px;
+  padding: 0px 8px;
   text-transform: uppercase;
   font-weight: normal;
 }
